@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ceco.gm2.gravitybox"
-    android:versionCode="26"
-    android:versionName="2.3.0" >
+    android:versionCode="27"
+    android:versionName="2.3.1" >
 
     <uses-sdk
         android:minSdkVersion="16"
